--- a/getting-started/configuration-first-run/configure-project.mdx
+++ b/getting-started/configuration-first-run/configure-project.mdx
@@ -1,248 +1,179 @@
 ---
-title: "Configure Your Project for Testing"
-description: "Explains how to include GoogleTest/GoogleMock headers and link appropriate libraries within a user’s own project. Covers project structure, relevant CMake or Bazel snippets, and best practices to avoid linkage or inclusion errors."
+title: "Configuring Your Project"
+description: "Covers how to add the necessary include paths, link against relevant libraries, handle dependencies, and set up the test runner. Ensures that build and execution environment is correctly configured for running tests."
 ---
 
-# Configure Your Project for Testing with GoogleTest and GoogleMock
+# Configuring Your Project with GoogleTest and GoogleMock
 
-This guide helps you seamlessly integrate GoogleTest and GoogleMock into your C++ project by including the right headers and linking against the appropriate libraries. You will learn how to structure your project, configure CMake or Bazel builds, and follow best practices to avoid common linkage or inclusion pitfalls.
+This guide helps you configure your C++ project to use GoogleTest and GoogleMock effectively. By following these steps, you will set up the necessary include paths, link with the appropriate libraries, manage dependencies, and configure your test runner environment to build and execute your tests successfully.
 
 ---
 
-## 1. Understanding Project Structure and Component Inclusion
+## 1. Understanding Components to Link
 
-To use GoogleTest and GoogleMock in your project, your code must be able to find their header files and link with their compiled libraries. This setup ensures the compiler recognizes the testing framework's APIs and the linker resolves symbols correctly.
+GoogleTest and GoogleMock consist of several libraries. Your project must link against one of the GoogleTest libraries and optionally GoogleMock libraries if you need mocking features.
 
-### What You Need:
+- **gtest:** Core GoogleTest library without a main() function.
+- **gtest_main:** GoogleTest with a built-in main() function, which provides a default test runner.
+- **gmock:** GoogleMock core library (requires linking with gtest).
+- **gmock_main:** GoogleMock with main() included, which initializes both GoogleMock and GoogleTest and runs tests.
 
-- Access to GoogleTest and GoogleMock source code or installed libraries.
-- Proper inclusion of the following headers in your test source files:
-  ```cpp
-  #include <gtest/gtest.h>     // For GoogleTest functionalities
-  #include <gmock/gmock.h>     // For GoogleMock functionalities
-  ```
-- Linking against GoogleTest and GoogleMock libraries.
-
-> GoogleMock is part of the googletest repository and depends on GoogleTest, so both libraries typically need linking.
+> **Tip:** Link against the `_main` version when you want to use the default test runner provided by the framework, otherwise link against the basic version if your project provides its own main function.
 
 
-## 2. Including Headers in Your Code
+## 2. Setting Up Include Paths
 
-### Minimal Header Includes
+GoogleTest and GoogleMock provide well-defined include directories containing header files needed to compile your tests.
 
-In your test source files, include the main GoogleTest and GoogleMock headers like so:
+### Basic Include Setup
+
+Add the following include paths to your compiler options:
+
+- For GoogleTest:
+  - `<googletest_source_dir>/include`
+  - `<googletest_source_dir>` (sometimes required for internal headers)
+
+- For GoogleMock:
+  - `<googlemock_source_dir>/include`
+  - `<googlemock_source_dir>`
+  - All GoogleTest include dirs from above
+
+These directories are usually exposed as **interface include directories** on targets `gtest`, `gtest_main`, `gmock`, and `gmock_main`.
+
+### Using pkg-config (Optional)
+
+You can use the provided pkg-config files (`gtest.pc`, `gmock.pc`) to get the compile flags (including includes and macros). For example:
+
+```bash
+pkg-config --cflags gtest
+pkg-config --cflags gmock
+```
+
+This way, you obtain all necessary include paths and defines.
+
+
+## 3. Linking Against the Relevant Libraries
+
+To build your test executable, link against the appropriate GoogleTest or GoogleMock libraries matching your needs.
+
+| Use Case                         | Libraries to Link                 |
+|---------------------------------|---------------------------------|
+| Basic GoogleTest tests           | `gtest_main` or `gtest`          |
+| Using GoogleMock mocking         | `gmock_main` or `gmock` + `gtest` |
+
+> **Note:** Linking `gmock_main` implies linking `gmock` and `gtest` internally. Similarly, `gtest_main` implies `gtest`.
+
+
+## 4. Handling Threading and Platform-Specific Flags
+
+GoogleTest and GoogleMock detect threading support automatically and add flags accordingly, including `-pthread` if needed. This is handled in their CMake integration and `.pc` files.
+
+If building manually, ensure you link with the threading system and add compiler flags such as `-DGTEST_HAS_PTHREAD=1` if your environment supports pthreads.
+
+
+## 5. Integrating Into Your Build System
+
+### Using CMake
+
+If you are using CMake, the simplest way is to add GoogleTest and GoogleMock as subdirectories or use installed targets.
+
+#### Example: Adding GoogleTest with FetchContent
+
+```cmake
+include(FetchContent)
+
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/refs/tags/release-1.16.0.zip
+)
+
+FetchContent_MakeAvailable(googletest)
+
+add_executable(my_test test_my_code.cpp)
+target_link_libraries(my_test PRIVATE gtest_main)
+enable_testing()
+add_test(NAME my_test COMMAND my_test)
+```
+
+#### Linking GoogleMock
+
+```cmake
+add_executable(my_mock_test test_mock.cpp)
+target_link_libraries(my_mock_test PRIVATE gmock_main)
+enable_testing()
+add_test(NAME my_mock_test COMMAND my_mock_test)
+```
+
+
+### Using pkg-config In CMake
+
+You may prefer pkg-config for compilation and linking flags. Here's how to integrate pkg-config in CMake:
+
+```cmake
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTEST REQUIRED gtest_main)
+
+add_executable(test_executable test.cpp)
+target_compile_options(test_executable PRIVATE ${GTEST_CFLAGS})
+target_link_libraries(test_executable PRIVATE ${GTEST_LDFLAGS})
+enable_testing()
+add_test(NAME test_executable COMMAND test_executable)
+```
+
+
+## 6. Providing Your Own Test Runner (Optional)
+
+If you want to customize test execution or have special setup codes, you can link against `gtest` or `gmock` directly rather than the `_main` variants, then provide your own `main()` function. Your main function should initialize the framework and run tests:
 
 ```cpp
 #include <gtest/gtest.h>
-#include <gmock/gmock.h>
+#include <gmock/gmock.h>  // If using GoogleMock features
+
+int main(int argc, char** argv) {
+  testing::InitGoogleMock(&argc, argv); // This initializes both GoogleMock and GoogleTest
+  return RUN_ALL_TESTS();
+}
 ```
 
-This inclusion grants access to the full testing and mocking APIs, including assertions, test macros, mock class macros, and matchers.
 
-### Best Practices
+## 7. Common Pitfalls and Tips
 
-- Always include `<gtest/gtest.h>` before `<gmock/gmock.h>` if you use both.
-- Ensure the include paths are visible to your compiler, which depends on your build configuration (explained in section 3).
-
-
-## 3. Configuring Your Build System
-
-The way you tell your build system to include headers and link libraries depends on the build system you're using. The two primary supported ways are **CMake** and **Bazel**.
-
----
-
-### A. CMake Configuration
-
-GoogleTest and GoogleMock provide CMake support to simplify integration.
-
-#### 3.A.1. Adding GoogleTest/GoogleMock to Your Project
-
-You can add GoogleTest/GoogleMock:
-
-- As an **external dependency** (installed or fetched automatically)
-- Or as a **subdirectory** in your source tree.
-
-#### 3.A.2. Using FetchContent to Add googletest
-
-Add the following to your `CMakeLists.txt`:
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/tags/release-1.17.0.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-# Add your executable and link
-add_executable(your_test_executable test_main.cpp)
-target_link_libraries(your_test_executable gtest_main gmock_main)
-# Add test
-add_test(NAME YourTest COMMAND your_test_executable)
-```
-
-> Replace `release-1.17.0.zip` with the desired version or commit if needed.
-
-#### 3.A.3. Using GoogleTest as Subdirectory
-
-If you have the googletest repo cloned inside your project, add:
-
-```cmake
-add_subdirectory(googletest)
-add_executable(your_test_executable test_main.cpp)
-target_link_libraries(your_test_executable gtest_main gmock_main)
-add_test(NAME YourTest COMMAND your_test_executable)
-```
-
-#### 3.A.4. Linking Libraries Explained
-
-| Library Target    | Description                                        |
-|-------------------|----------------------------------------------------|
-| `gtest`           | GoogleTest core without main()                     |
-| `gtest_main`      | GoogleTest plus a main() function                   |
-| `gmock`           | GoogleMock core without main(), depends on gtest  |
-| `gmock_main`      | GoogleMock with main(), depends on gmock and gtest |
-
-For typical test binaries, linking against `gtest_main` or `gmock_main` is recommended as they provide a `main()` entry point.
-
-#### 3.A.5. Include Directories
-
-CMake's targets handle include directories transitively. You do not need to manually add include directories if linking properly.
+- **Missing Include Paths:** Forgetting to include all required GoogleTest/GoogleMock include directories will lead to compilation errors.
+- **Linker Errors:** If you see linker errors related to `main()`, verify you are linking against `_main` variants or provide your own `main()`.
+- **Threading Support:** Ensure your environment supports threading or disable pthread usage via build options (`-Dgtest_disable_pthreads` in CMake).
+- **Version Compatibility:** Match your GoogleTest and GoogleMock versions to avoid compatibility issues.
 
 
-### Troubleshooting CMake Linking
+## 8. Verifying Your Configuration
 
-- If you see linker errors missing GoogleMock or GoogleTest symbols, verify that `target_link_libraries()` includes the correct libraries (`gmock_main` or `gtest_main`).
-- On Windows, ensure `gtest_force_shared_crt` is set to match your runtime linkage.
-- Check that the C++ standard is set to at least C++17 using:
-  ```cmake
-  set(CMAKE_CXX_STANDARD 17)
-  set(CMAKE_CXX_STANDARD_REQUIRED ON)
-  ```
+After configuring your project, build your test executable and run it. On success, you should see output like:
 
----
-
-### B. Bazel Configuration
-
-Bazel users add dependencies by referencing GoogleTest/GoogleMock targets.
-
-#### 3.B.1. Declare Dependency in `MODULE.bazel`
-
-Add googletest as a Bazel module dependency.
-
-#### 3.B.2. Use in BUILD File
-
-```bazel
-cc_test(
-    name = "your_test",
-    srcs = ["your_test.cc"],
-    deps = ["@com_google_googletest//:gmock_main"],
-)
-```
-
----
-
-## 4. Example CMakeLists.txt for a Project Using GoogleMock
-
-```cmake
-cmake_minimum_required(VERSION 3.14)
-project(MyProjectTests LANGUAGES CXX)
-
-# Set C++ standard
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/release-1.17.0.zip
-)
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-add_executable(my_tests test_main.cpp my_mock_tests.cpp)
-# Link against GoogleMock and GoogleTest main libraries
-target_link_libraries(my_tests gmock_main gtest_main)
-
-enable_testing()
-add_test(NAME my_tests COMMAND my_tests)
-```
-
-This will download googletest/GoogleMock, build them with your project, and produce a test executable that is ready to run.
-
----
-
-## 5. Avoiding Common Pitfalls
-
-- **Missing `main()` linker errors**: Link against `gtest_main` or `gmock_main` libraries instead of only `gtest` or `gmock`.
-
-- **Include path errors**: Ensure your compiler knows where to find `<gtest/gtest.h>` and `<gmock/gmock.h>`. Using proper CMake targets covers this automatically.
-
-- **Runtime library mismatches (Windows)**: Set `gtest_force_shared_crt` in CMake to align CRT linkage.
-
-- **Multiple definitions or symbol clashes**: Avoid duplicating GoogleTest or GoogleMock source files in multiple targets.
-
-- **Compiler C++ standard**: GoogleTest/GoogleMock requires at least C++17; ensure your project sets this explicitly.
-
-- **Link order matters**: Always link `gmock_main` or `gmock` after your project libraries.
-
-
-## 6. Verifying Your Setup
-
-After configuration:
-
-1. Build your test target successfully.
-2. Run the test binary; you should see GoogleTest output indicating test discovery and execution.
-
-Example command:
-```bash
-ctest
-# or directly
-./my_tests
-```
-
-Expected output snippet:
 ```
 Running main() from gmock_main.cc
 [==========] Running 3 tests from 1 test suite.
 [----------] Global test environment set-up.
-[----------] 3 tests from MyMockTests
-[ RUN      ] MyMockTests.TestFunction
-[       OK ] MyMockTests.TestFunction (0 ms)
-[----------] 3 tests from MyMockTests (1 ms total)
+[ RUN      ] SampleTest.DoesBlah
+[       OK ] SampleTest.DoesBlah (0 ms)
+[----------] 1 test from SampleTest.
 [----------] Global test environment tear-down
-[==========] 3 tests from 1 test suite ran. (1 ms total)
+[==========] 3 tests from 1 test suite ran. (3 ms total)
 [  PASSED  ] 3 tests.
 ```
 
 
-## 7. Additional Notes
+## 9. Further Reading and Next Steps
 
-- The GoogleMock and GoogleTest CMake files are community-maintained.
-- GoogleTest and GoogleMock use strict compiler warnings; your code should be warning-clean.
-- You can define GoogleMock-specific flags to customize behavior via macros (see `gmock-port.h`).
-
-
----
-
-# Summary
-
-| Task | Recommended Library to Link |
-|-------|-----------------------------|
-| Tests with main() provided | `gtest_main` or `gmock_main`|
-| Tests without main()        | `gtest` or `gmock`           |
-
-For integrating GoogleTest/GoogleMock, proper header inclusion and linking according to your build system is essential. CMake users benefit from built-in targets and convenient `FetchContent` usage, while Bazel users rely on explicit dependencies. Align compiler settings, especially the C++ standard (C++17), and avoid duplicate sources or incorrect link orders to ensure reliable builds and runs.
+- [Writing and Running Your First Test](https://github.com/google/googletest/blob/main/docs/guides/core-workflows/getting-started-tests.md) — Learn how to write test cases and assertions.
+- [Mocking Dependencies with GoogleMock](https://github.com/google/googletest/blob/main/docs/guides/core-workflows/mocking-basics.md) — Get started with mocking objects.
+- [Using pkg-config](https://github.com/google/googletest/blob/main/docs/pkgconfig.md) — More about pkg-config integration.
+- [Installation with CMake](https://github.com/google/googletest/blob/main/docs/getting-started/prerequisites-installation/install-via-cmake.md) — Complete installation instructions.
 
 ---
 
-## References & Next Steps
+<Check>
+Make sure your build system has access to GoogleTest and GoogleMock libraries and include paths before compiling tests.
+</Check>
 
-- [GoogleTest Installation with CMake](../prerequisites-installation/installation-cmake)
-- [GoogleMock Quick Start Guide](../configuration-first-run/quick-start-mocking)
-- [Writing and Running Your First Test](../configuration-first-run/write-first-test)
-- [GoogleMock Official Repo on GitHub](https://github.com/google/googletest)
-- [GoogleMock Header Reference (`gmock.h`)](https://github.com/google/googletest/blob/main/googlemock/include/gmock/gmock.h)
-
-You should continue to the **Write and Run Your First Test** guide to validate your setup and begin writing meaningful tests with GoogleTest and GoogleMock.
+<Note>
+If you want to customize compile or linker flags, examine `googletest/cmake/internal_utils.cmake` which defines the compiler settings used.
+</Note>
