--- a/getting-started/configuration-first-run/write-first-test.mdx
+++ b/getting-started/configuration-first-run/write-first-test.mdx
@@ -1,202 +1,52 @@
 ---
-title: "Write and Run Your First Test"
-description: "Step-by-step instructions to author a basic test using GoogleTest, including code samples. Covers compiling and running the test, interpreting output, and demonstrates how to validate that the setup works end-to-end."
+title: "Writing and Running Your First Test"
+description: "Leads the user through creating their first simple test, building it, and running it—covering both unit tests (GoogleTest) and a mock-enabled test (GoogleMock). Delivers immediate validation that everything is working."
 ---
 
-# Write and Run Your First Test
+# Writing and Running Your First Test
 
-Welcome to your first hands-on experience with GoogleTest! This guide will walk you through creating a simple test program, compiling it, running the test, and understanding the results. By the end, you will have a working test that confirms your setup and shows the power of GoogleTest's assertion and test organization framework.
+Welcome to your first hands-on with GoogleTest and GoogleMock. This guide walks you through creating a simple test, building it, and running it successfully, providing immediate validation that everything is set up correctly. You will write a test manually using GoogleTest and a mock-enabled test using GoogleMock to understand both core workflows.
 
 ---
 
-## 1. Create Your Test Source File
+## 1. Prerequisites Before Writing Tests
 
-Start by creating a C++ source file, e.g., `my_first_test.cc`. This file will contain the code for your first test.
+Before writing your first test:
 
-In the file, include the GoogleTest header and define a basic test:
+- Ensure your project is configured to find GoogleTest and GoogleMock headers and libraries.
+- Confirm you have either linked against the `gtest_main` or `gmock_main` target (which provide a main entry point), or that you plan to provide your own `main()`.
+- Your build setup should support C++17 and be compatible with GoogleTest’s requirements.
+
+If you need help with configuration, see the [Configuring Your Project](https://example.com/getting-started/configuration-first-run/configure-project) guide.
+
+---
+
+## 2. Writing a Simple GoogleTest Test
+
+Create a new C++ source file, for example, `simple_test.cpp`. Then follow these steps:
+
+### Step 1: Include GoogleTest Header
 
 ```cpp
 #include <gtest/gtest.h>
-
-// Define a test named HandlesZeroInput in test suite FactorialTest
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(1, 1);  // A simple assertion that checks if 1 equals 1
-}
 ```
 
-This test checks a trivial condition to verify your GoogleTest integration.
+### Step 2: Write the Tested Code (Example Function)
 
----
-
-## 2. Compile Your Test
-
-You need to compile your test file linking against the GoogleTest library.
-
-### Using g++ (example for Linux/macOS)
-
-```sh
-g++ -std=c++17 -isystem /path/to/googletest/include -pthread my_first_test.cc /path/to/libgtest.a /path/to/libgtest_main.a -o my_first_test
-```
-
-- Replace `/path/to/googletest/include` with the actual path to GoogleTest headers.
-- Replace `/path/to/libgtest.a` and `/path/to/libgtest_main.a` with the paths to the static libraries.
-
-### Using CMake
-
-Create a `CMakeLists.txt` for a smoother build process:
-
-```cmake
-cmake_minimum_required(VERSION 3.10)
-project(MyFirstTest)
-
-# Enable testing support
-find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIRS})
-
-add_executable(my_first_test my_first_test.cc)
-target_link_libraries(my_first_test ${GTEST_LIBRARIES} pthread)
-
-enable_testing()
-add_test(NAME MyFirstTest COMMAND my_first_test)
-```
-
-Run CMake to configure and build your test.
-
----
-
-## 3. Run Your Test
-
-After compiling, execute your test binary from the command line:
-
-```sh
-./my_first_test
-```
-
-### Expected Output
-
-```
-[==========] Running 1 test from 1 test suite.
-[----------] Global test environment set-up.
-[----------] 1 test from FactorialTest
-[ RUN      ] FactorialTest.HandlesZeroInput
-[       OK ] FactorialTest.HandlesZeroInput
-[----------] 1 test from FactorialTest ran. (0 ms total)
-[----------] Global test environment tear-down
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
-```
-
-This output indicates the test execution flow and that your test passed.
-
----
-
-## 4. Analyze the Test Code and Output
-
-- The macro `TEST(TestSuiteName, TestName)` defines a test method under the specified suite.
-- The **test suite** groups related tests and should logically reflect your code structure.
-- The **assertion** `EXPECT_EQ(expected, actual)` checks equality; on failure, it reports but continues the test.
-
-Running your test shows GoogleTest handles test registration, setup, execution, and teardown automatically.
-
----
-
-## 5. Expand Your Test
-
-You can add more assertions and test cases:
+For demonstration, we'll test a simple factorial function:
 
 ```cpp
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(1, Factorial(1));
-  EXPECT_EQ(2, Factorial(2));
-  EXPECT_EQ(6, Factorial(3));
-  EXPECT_EQ(40320, Factorial(8));
-}
-```
-
-Make sure the function `Factorial` is implemented and visible.
-
----
-
-## 6. Incorporate Test Fixtures
-
-For multiple tests that share common setup, use test fixtures:
-
-```cpp
-class QueueTest : public testing::Test {
- protected:
-  void SetUp() override {
-    // Initialization code here
-  }
-
-  void TearDown() override {
-    // Cleanup code here
-  }
-
-  // Shared objects for tests
-  Queue<int> queue_;
-};
-
-TEST_F(QueueTest, IsEmptyInitially) {
-  EXPECT_EQ(queue_.size(), 0);
-}
-
-TEST_F(QueueTest, EnqueueIncreasesSize) {
-  queue_.Enqueue(10);
-  EXPECT_EQ(queue_.size(), 1);
-}
-```
-
-Use `TEST_F(TestFixtureName, TestName)` to define tests that use fixtures.
-
----
-
-## 7. Running Tests with Filters and Flags
-
-- Run specific tests using `--gtest_filter`:
-
-  ```sh
-  ./my_first_test --gtest_filter=FactorialTest.HandlesZeroInput
-  ```
-
-- List all tests without running them using:
-
-  ```sh
-  ./my_first_test --gtest_list_tests
-  ```
-
-- Stop on first failure with `--gtest_fail_fast`.
-
----
-
-## 8. Troubleshooting Tips
-
-- **Build errors**: Check that GoogleTest headers and libraries are correctly included and linked.
-- **Tests not running**: Verify `main()` returns the value of `RUN_ALL_TESTS()`.
-- **Naming issues**: Avoid underscores in test suite and test names to prevent name conflicts.
-- **Assertion failures**: Read the GoogleTest output carefully; it provides file, line, and detailed messages.
-- **Disabled tests**: Tests prefixed with `DISABLED_` won't run unless you use `--gtest_also_run_disabled_tests`.
-
----
-
-## 9. Next Steps
-
-- Add real code and write meaningful tests covering it.
-- Explore advanced [assertions](reference/assertions.md) and [parameterized tests](reference/testing.md#INSTANTIATE_TEST_SUITE_P).
-- Use [test fixtures](primer.md#same-data-multiple-tests) for shared setup.
-- Consider integrating GoogleMock for mocking dependencies.
-- Refer to the [GoogleTest Primer](primer.md) and [Advanced Topics](advanced.md) for deeper knowledge.
-
----
-
-## Sample Complete Test File
-
-```cpp
-#include <gtest/gtest.h>
-
 int Factorial(int n) {
-  return (n <= 1) ? 1 : n * Factorial(n - 1);
+  if (n <= 1) return 1;
+  return n * Factorial(n - 1);
 }
+```
 
+### Step 3: Define Tests Using `TEST` Macro
+
+Use the `TEST(TestSuiteName, TestName)` macro. For example:
+
+```cpp
 TEST(FactorialTest, HandlesZeroInput) {
   EXPECT_EQ(Factorial(0), 1);
 }
@@ -205,25 +55,228 @@ TEST(FactorialTest, HandlesPositiveInput) {
   EXPECT_EQ(Factorial(1), 1);
   EXPECT_EQ(Factorial(2), 2);
   EXPECT_EQ(Factorial(3), 6);
-  EXPECT_EQ(Factorial(8), 40320);
 }
+```
+
+### Step 4: Build Your Test
+
+If you linked your test executable with `gtest_main` or `gmock_main`, the main entry point is provided, so no need to write it yourself.
+
+If you need to provide `main()`, use:
+
+```cpp
+#include <gtest/gtest.h>
 
 int main(int argc, char **argv) {
-  testing::InitGoogleTest(&argc, argv);
+  ::testing::InitGoogleTest(&argc, argv);
   return RUN_ALL_TESTS();
 }
 ```
 
-Compile and run this file to verify your GoogleTest environment is correctly set up.
+### Step 5: Run the Test
+
+Execute your test binary. Expect output like:
+
+```
+[==========] Running 2 tests from 1 test suite.
+[----------] Global test environment set-up.
+[----------] 2 tests from FactorialTest
+[ RUN      ] FactorialTest.HandlesZeroInput
+[       OK ] FactorialTest.HandlesZeroInput (0 ms)
+[ RUN      ] FactorialTest.HandlesPositiveInput
+[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
+[----------] 2 tests from FactorialTest (0 ms total)
+
+[----------] Global test environment tear-down
+[==========] 2 tests from 1 test suite ran. (0 ms total)
+[  PASSED  ] 2 tests.
+```
+
+Success means your test passed and your environment is correctly configured!
+
+---
+
+## 3. Writing a GoogleMock-Enabled Test
+
+GoogleMock extends GoogleTest by allowing you to create mock classes and set expectations on their methods.
+
+### Step 1: Include GoogleMock Header
+
+```cpp
+#include <gmock/gmock.h>
+#include <gtest/gtest.h>
+```
+
+### Step 2: Define an Interface to Mock
+
+For example, imagine a simple `Database` interface:
+
+```cpp
+class Database {
+ public:
+  virtual ~Database() = default;
+  virtual bool Connect(const std::string& url) = 0;
+  virtual int GetRecordCount() const = 0;
+};
+```
+
+### Step 3: Define a Mock Class
+
+Use the `MOCK_METHOD` macro inside your mock class:
+
+```cpp
+class MockDatabase : public Database {
+ public:
+  MOCK_METHOD(bool, Connect, (const std::string& url), (override));
+  MOCK_METHOD(int, GetRecordCount, (), (const, override));
+};
+```
+
+### Step 4: Write a Test Using the Mock
+
+Set expectations using `EXPECT_CALL` and test interactions:
+
+```cpp
+TEST(DatabaseTest, ConnectAndCount) {
+  MockDatabase mock_db;
+
+  // Expect Connect() to be called once with "db://localhost" and return true
+  EXPECT_CALL(mock_db, Connect("db://localhost")).WillOnce(::testing::Return(true));
+
+  // Expect GetRecordCount() to be called once and return 42
+  EXPECT_CALL(mock_db, GetRecordCount()).WillOnce(::testing::Return(42));
+
+  // Exercise the mock
+  EXPECT_TRUE(mock_db.Connect("db://localhost"));
+  EXPECT_EQ(mock_db.GetRecordCount(), 42);
+}
+```
+
+### Step 5: Build and Run Your Mock Test
+
+Link with `gmock_main` or provide your own `main` as described previously, then run the executable.
+
+Output on success will confirm your mock expectations are met.
+
+---
+
+## 4. Understanding Test Outputs
+
+GoogleTest and GoogleMock provide detailed console output.
+
+- `[ RUN      ]` shows each test starting.
+- `[       OK ]` shows a test passed.
+- `[  FAILED  ]` shows a test failed, followed by an error message and stack trace.
+- Mocks will report expectation violations as failures.
+
+If all tests pass, your setup is verified and you can start expanding your test suite.
+
+---
+
+## 5. Troubleshooting Common Issues
+
+<AccordionGroup title="Common Issues When Writing and Running Your First Test">
+<Accordion title="Test Binary Fails to Link Due to Missing main()">
+If you get link errors about `main()`, confirm you:
+
+- Are linking against **gtest_main** or **gmock_main** for automatic main implementation.
+- Or have written your own `main()` calling `InitGoogleTest()` and `RUN_ALL_TESTS()`.
+</Accordion>
+<Accordion title="Tests Are Not Being Discovered or Run">
+Make sure:
+
+- Your test source files are compiled and linked into the test binary.
+- You are not disabling tests intentionally (e.g., test names starting with `DISABLED_`).
+- You call `RUN_ALL_TESTS()` exactly once.
+</Accordion>
+<Accordion title="Mock Expectations Fail Unexpectedly">
+
+- Verify that every expected call via `EXPECT_CALL` happens at least as many times as specified.
+- Use `WillRepeatedly()` if a call may be invoked multiple times beyond initial expectations.
+- Check for parameter mismatches in your expectations.
+</Accordion>
+</AccordionGroup>
+
+<Note>
+If you encounter build or runtime errors beyond these, consult the [Troubleshooting Common Issues](https://example.com/getting-started/troubleshooting-validation/common-issues) guide.
+</Note>
+
+---
+
+## 6. Next Steps
+
+- Explore advanced assertions and test fixtures in the [GoogleTest Primer](https://example.com/docs/primer).
+- Learn mocking strategies and advanced matching in the [Mocking Basics](https://example.com/guides/core-workflows/mocking-basics) guide.
+- Review the [Feature Highlights](https://example.com/overview/feature-glance/feature-highlights) to understand the full capability of GoogleTest.
+
+Begin building comprehensive test suites to improve your C++ project’s reliability confidently.
+
+---
+
+## Appendix: Full Minimal Example
+
+```cpp
+#include <gtest/gtest.h>
+#include <gmock/gmock.h>
+
+// Function to test.
+int Factorial(int n) {
+  if (n <= 1) return 1;
+  return n * Factorial(n - 1);
+}
+
+// Interface to mock.
+class Database {
+ public:
+  virtual ~Database() = default;
+  virtual bool Connect(const std::string& url) = 0;
+  virtual int GetRecordCount() const = 0;
+};
+
+class MockDatabase : public Database {
+ public:
+  MOCK_METHOD(bool, Connect, (const std::string& url), (override));
+  MOCK_METHOD(int, GetRecordCount, (), (const, override));
+};
+
+// Simple GoogleTest.
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
+
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
+  EXPECT_EQ(Factorial(3), 6);
+}
+
+// GoogleMock-enabled test.
+TEST(DatabaseTest, ConnectAndCount) {
+  MockDatabase mock_db;
+
+  EXPECT_CALL(mock_db, Connect("db://localhost")).WillOnce(::testing::Return(true));
+  EXPECT_CALL(mock_db, GetRecordCount()).WillOnce(::testing::Return(42));
+
+  EXPECT_TRUE(mock_db.Connect("db://localhost"));
+  EXPECT_EQ(mock_db.GetRecordCount(), 42);
+}
+
+int main(int argc, char** argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
 
 ---
 
 ## References
 
-- [GoogleTest Primer](primer.md)
-- [Testing Reference: Writing Tests](reference/testing.md)
-- [Getting Started with GoogleMock](getting-started/configuration-first-run/quick-start-mocking)
-- [FAQ: Why No Underscores in Test Names?](faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore)
-- [Advanced GoogleTest Topics](advanced.md)
+- [GoogleTest Primer](https://example.com/docs/primer) for detailed test writing
+- [Configuration Guide](https://example.com/getting-started/configuration-first-run/configure-project)
+- [Mocking Basics Guide](https://example.com/guides/core-workflows/mocking-basics)
+- [Feature Highlights](https://example.com/overview/feature-glance/feature-highlights)
+- [Troubleshooting Guide](https://example.com/getting-started/troubleshooting-validation/common-issues)
 
 ---
+
+Embrace TDD with GoogleTest and GoogleMock by expanding your test suites from here. Your first tests are your gateway to robust, maintainable C++ code.
